<?xml version = "1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caret</name>
  <description>CARET</description>
  <version>0.2.2</version>
  <maintainer email="hasegawa@isp.co.jp">hsgwa</maintainer>
  <license>Apache License 2.0</license>


  <depend>cmake</depend>
  <depend>git</depend>
  <depend>wget</depend>
  <depend>python3-rosdep</depend>
  <depend>python3-setuptools</depend>
  <depend>python3-vcstool</depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-flake8</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
